Update notebook tools using bind_tools

--- a/notebooks/10-tools.ipynb
+++ b/notebooks/10-tools.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f43acad6",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "'¡Hola! Estoy aquí y listo para ayudarte. ¿En qué puedo asistirte hoy?'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "384514c6",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "'No tengo una tienda física ni ofrezco productos, pero puedo ayudarte a crear una lista de productos que podrías ofrecer en una tienda, o darte ideas sobre qué tipo de productos podrían ser populares. ¿Te gustaría que te ayude con eso?'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "9c47cf20",
    "metadata": {},
    "outputs": [],
@@ -220,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "3315b61b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Classic White Tee - Timeless Style and Comfort - 73Classic Black T-Shirt - 35Sleek White & Orange Wireless Gaming Controller - 69Sleek Wireless Headphone & Inked Earbud Set - 44Sleek Comfort-Fit Over-Ear Headphones - 28Efficient 2-Slice Toaster - 48Sleek Wireless Computer Mouse - 10Sleek Modern Laptop for Professionals - 97Stylish Red & Silver Over-Ear Headphones - 39Sleek Mirror Finish Phone Case - 27Sleek Smartwatch with Vibrant Display - 16Sleek Modern Leather Sofa - 53Mid-Century Modern Wooden Dining Table - 24Elegant Golden-Base Stone Top Dining Table - 66Modern Elegance Teal Armchair - 25Elegant Solid Wood Dining Table - 67Modern Minimalist Workstation Setup - 49Modern Ergonomic Office Chair - 71Futuristic Holographic Soccer Cleats - 39Chic Summer Denim Espadrille Sandals - 33Vibrant Runners: Bold Orange & Blue Sneakers - 27Vibrant Pink Classic Sneakers - 84Futuristic Silver and Gold High-Top Sneaker - 68Futuristic Chic High-Heel Boots - 36Elegant Patent Leather Peep-Toe Pumps with Gold-Tone Heel - 53Elegant Purple Leather Loafers - 17Classic Blue Suede Casual Shoes - 39Sleek Futuristic Electric Bicycle - 22Sleek All-Terrain Go-Kart - 37Radiant Citrus Eau de Parfum - 73Sleek Olive Green Hardshell Carry-On Luggage - 48Chic Transparent Fashion Handbag - 61Trendy Pink-Tinted Sunglasses - 38Asus zenbook - 1000Toy Car G-Wagon - 299iPhone 17 pro max - 899telefon - 100000New Cotton Shirt2 - 1100Mobile Phones - 10Sofa Retratil 3 Lugares - 699Pest Control - 2000Classic Navy Blue Baseball Capss - 12user_1764435974170mm - 100Sweatpans - 34Headphones - 33New Productb - 10New Product UPDATED - 20form.title - 121212some title - 456title - 1250'"
+       "'Rainbow Glitter High Heels - 41Vibrant Runners: Bold Orange & Blue Sneakers - 27Chic Summer Denim Espadrille Sandals - 33Futuristic Silver and Gold High-Top Sneaker - 68Vibrant Pink Classic Sneakers - 84Futuristic Chic High-Heel Boots - 36Elegant Patent Leather Peep-Toe Pumps with Gold-Tone Heel - 53Elegant Purple Leather Loafers - 17Sleek Futuristic Electric Bicycle - 22Classic Blue Suede Casual Shoes - 39Sleek All-Terrain Go-Kart - 37Radiant Citrus Eau de Parfum - 73Chic Transparent Fashion Handbag - 61Trendy Pink-Tinted Sunglasses - 38Elegant Glass Tumbler Set - 50cxz - 22 - 3Muka - 11New Product1764607123903updatat - 24Sleek Mirror Finish Phone Case 45 - 6767New Product1764607292576updatat - 24муки4ка - 69bag - 100iphone 17 - 1000iPhone 19 - 2000samsung 25 - 100iphone 1000 - 3000QATestLab product - 10iphone 131 - 500iPhone 199 - 2000саа - 11111New Pgd - 10New Product 1764615358763 - 12desi_test - 7Sandália - 350Tênis da Nike - 300string - 5Mishka - 5sdfd - 18hjgjkgkh - 199Mishdssfdka - 5Mishdssfffdka - 5Мишки Барни111 - 1899923 - 23Book - 15Computer for Mercedes C class W203 - 350'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,11 +325,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "251a329f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "import requests\n",
+    "\n",
+    "@tool(\"get_weather\", description=\"Get the weather of the city\")\n",
+    "def get_weather(city: str):\n",
+    "    response = requests.get(f\"https://geocoding-api.open-meteo.com/v1/search?name={city}&count=1\")\n",
+    "    data = response.json()\n",
+    "    latitude = data[\"results\"][0][\"latitude\"]\n",
+    "    longitude = data[\"results\"][0][\"longitude\"]\n",
+    "    response = requests.get(f\"https://api.open-meteo.com/v1/forecast?latitude={latitude}&longitude={longitude}&current_weather=true\")\n",
+    "    data = response.json()\n",
+    "    response = f\"The weather in {city} is {data['current_weather']['temperature']}C with {data['current_weather']['windspeed']}km/h wind\"\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa4977b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The weather in Bogota is 14.6C with 10.8km/h wind'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_weather.invoke(\"Bogota\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "21a09781",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'get_products',\n",
+       "  'args': {},\n",
+       "  'id': 'call_F9RJdBCym1sjRbunQ6jeKFjO',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "Eres un asistente de ventas que ayuda a los clientes a encontrar los productos que buscan y el clima de la ciudad.\n",
+    "\n",
+    "Tus tools son:\n",
+    "- get_weather: Obtiene el clima de la ciudad\n",
+    "- get_products: Obtiene los productos de la tienda\n",
+    "\"\"\"\n",
+    "messages = [\n",
+    "    (\"system\", system_prompt),\n",
+    "    (\"user\", \"Dime los productos que ofrece la tienda\")\n",
+    "]\n",
+    "# Agregamos el bind de la coleccion de tools\n",
+    "llm_with_tools = llm.bind_tools([get_products, get_weather])\n",
+    "response = llm_with_tools.invoke(messages)\n",
+    "response.tool_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "972be1df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'get_weather',\n",
+       "  'args': {'city': 'Bogotá'},\n",
+       "  'id': 'call_yYTbbNLnTGqzINAc9db1ySUg',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "Eres un asistente de ventas que ayuda a los clientes a encontrar los productos que buscan y el clima de la ciudad.\n",
+    "\n",
+    "Tus tools son:\n",
+    "- get_weather: Obtiene el clima de la ciudad\n",
+    "- get_products: Obtiene los productos de la tienda\n",
+    "\"\"\"\n",
+    "messages = [\n",
+    "    (\"system\", system_prompt),\n",
+    "    (\"user\", \"Cual es el clima de la capital de Colombia?\")\n",
+    "]\n",
+    "# Agregamos el bind de la coleccion de tools\n",
+    "llm_with_tools = llm.bind_tools([get_products, get_weather])\n",
+    "response = llm_with_tools.invoke(messages)\n",
+    "response.tool_calls"
+   ]
   }
  ],
  "metadata": {
